<resources>
    <string name="app_name">Base Project</string>

    <string name="title_login">Login</string>
    <string name="title_username">Username</string>
    <string name="title_password">Password</string>
    <string name="title_lupa_kata_sandi">Lupa Kata sandi?</string>
    <string name="title_masuk">Masuk</string>

    <string name="title_null">Null</string>
    <string name="title_koneksi_anda_bermasalah">Koneksi anda bermasalah</string>
    <string name="dec_koneksi_anda_bermasalah">Periksa Koneksi dan coba lagi atau Refresh Aplikasi</string>
    <string name="title_coba_lagi">Coba Lagi</string>
</resources>