<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".ui.no_connection.NoConnectionFragment">

    <View
        android:id="@+id/view"
        android:layout_width="100dp"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@color/gray" />

    <ImageView
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:contentDescription="@string/title_null"
        android:src="@drawable/img_noconnection" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/semibold"
            android:text="@string/title_koneksi_anda_bermasalah" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/dec_koneksi_anda_bermasalah" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/round_button_2"
        android:fontFamily="@font/semibold"
        android:hint="@string/title_coba_lagi"
        android:textColorHint="@color/white" />

</LinearLayout>